[gd_scene load_steps=7 format=3 uid="uid://d3ylqyij3fkit"]

[ext_resource type="Script" uid="uid://rin2wg3jtlxh" path="res://scripts/GazeController.gd" id="1_6igcf"]
[ext_resource type="Script" uid="uid://cmk0tglp4mq5m" path="res://scripts/GridBoard.gd" id="1_u6khg"]
[ext_resource type="Script" uid="uid://bpxqp7xxdn6fb" path="res://scripts/Farmer.gd" id="3_mopgc"]
[ext_resource type="Script" uid="uid://bgkowbx51sybh" path="res://scripts/WaveController.gd" id="3_ou18a"]
[ext_resource type="Texture2D" uid="uid://1oh6ldhxsl27" path="res://icon.svg" id="4_3xgnh"]
[ext_resource type="Script" uid="uid://c28h6qcjvdn4o" path="res://scripts/Enemy.gd" id="4_ivtx6"]

[node name="Game" type="Node2D"]

[node name="GridBoard" type="Node2D" parent="."]
script = ExtResource("1_u6khg")

[node name="GazeController" type="Node2D" parent="."]
script = ExtResource("1_6igcf")

[node name="Combat" type="Node2D" parent="."]

[node name="Farmers" type="Node2D" parent="Combat"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="Combat/Farmers"]
script = ExtResource("3_mopgc")

[node name="Sprite2D" type="Sprite2D" parent="Combat/Farmers"]
texture = ExtResource("4_3xgnh")

[node name="Enemies" type="Node2D" parent="Combat"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="Combat/Enemies"]
script = ExtResource("4_ivtx6")

[node name="Sprite2D" type="Sprite2D" parent="Combat/Enemies"]
texture = ExtResource("4_3xgnh")

[node name="EnemySpawner" type="Node" parent="."]

[node name="WaveController" type="Node" parent="."]
script = ExtResource("3_ou18a")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StatusLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
